Alternative fix: limit char set used to UTF-8 only.